--- a/templates/pages/rgpd.html.twig
+++ b/templates/pages/rgpd.html.twig
@@ -7,80 +7,7 @@
 
         <div class="container" id="caption-border">
             <div class="card-panel">
-                <h3 class="center-align">POLITIQUE DE CONFIDENTIALITÉ</h3>
-                <div class="row center">
-                    <p><a href="https://charlottesaidi.github.io/portfolio/">www.charlottesaidi.fr</a></p>
-                    <p>Charlotte Saidi</p>
-                    <p>Type de site : Portfolio</p>
-                </div>
-                <h4>Objectif de cette politique de confidentialité</h4>
-                <p>L'objectif de cette politique de confidentialité est d'informer les utilisateurs de ce site des données personnelles que je recueillerai ainsi que les informations suivantes, le cas échéant :</p>
-                <ul>
-                    <li>Les données personnelles que je recueille</li>
-                    <li>L’utilisation des données recueillies</li>
-                    <li>Qui a accès aux données recueillies</li>
-                    <li>Les droits des utilisateurs du site</li>
-                </ul>
-                <p>Cette politique de confidentialité fonctionne parallèlement aux conditions générales d’utilisation du site.</p>
-                <h4>Lois applicables</h4>
-                <p>Conformément au Règlement général sur la protection des données (RGPD), cette politique de confidentialité est conforme aux règlements suivants.</p>
-                <p>Les données à caractère personnel doivent être :</p>
-                <ul>
-                    <li>traitées de manière licite, loyale et transparente au regard de la personne concernée (licéité, loyauté, transparence) ;</li>
-                    <li>collectées pour des finalités déterminées, explicites et légitimes, et ne pas être traitées ultérieurement d'une manière incompatible avec ces finalités; le traitement ultérieur à des fins archivistiques dans l'intérêt public, à des fins de recherche scientifique ou historique ou à des fins statistiques n'est pas considéré, conformément à l'article 89, paragraphe 1, comme incompatible avec les finalités initiales (limitation des finalités) ;</li>
-                    <li>adéquates, pertinentes et limitées à ce qui est nécessaire au regard des finalités pour lesquelles elles sont traitées (minimisation des données) ;</li>
-                    <li>exactes et, si nécessaire, tenues à jour. Toutes les mesures raisonnables doivent être prises pour que les données à caractère personnel qui sont inexactes, eu égard aux finalités pour lesquelles elles sont traitées, soient effacées ou rectifiées sans tarder (exactitude) ;</li>
-                    <li>conservées sous une forme permettant l'identification des personnes concernées pendant une durée n'excédant pas celle nécessaire au regard des finalités pour lesquelles elles sont traitées. Les données à caractère personnel peuvent être conservées pour des durées plus longues dans la mesure où elles seront traitées exclusivement à des fins archivistiques dans l'intérêt public, à des fins de recherche scientifique ou historique ou à des fins statistiques conformément à l'article 89, paragraphe 1, pour autant que soient mises en œuvre les mesures techniques et organisationnelles appropriées requises par le règlement afin de garantir les droits et libertés de la personne concernée (limitation de la conservation) ;</li>
-                    <li>traitées de façon à garantir une sécurité appropriée des données à caractère personnel, y compris la protection contre le traitement non autorisé ou illicite et contre la perte, la destruction ou les dégâts d'origine accidentelle, à l'aide de mesures techniques ou organisationnelles appropriées (intégrité et confidentialité).</li>
-                </ul>
-                <p>Le traitement n'est licite que si, et dans la mesure où, au moins une des conditions suivantes est remplie :</p>
-                <ul>
-                    <li>la personne concernée a consenti au traitement de ses données à caractère personnel pour une ou plusieurs finalités spécifiques ;</li>
-                    <li>le traitement est nécessaire à l'exécution d'un contrat auquel la personne concernée est partie ou à l'exécution de mesures précontractuelles prises à la demande de celle-ci ;</li>
-                    <li>le traitement est nécessaire au respect d'une obligation légale à laquelle le responsable du traitement est soumis ;</li>
-                    <li>le traitement est nécessaire à la sauvegarde des intérêts vitaux de la personne concernée ou d'une autre personne physique ;</li>
-                    <li>le traitement est nécessaire à l'exécution d'une mission d'intérêt public ou relevant de l'exercice de l'autorité publique dont est investi le responsable du traitement ;</li>
-                    <li>le traitement est nécessaire aux fins des intérêts légitimes poursuivis par le responsable du traitement ou par un tiers, à moins que ne prévalent les intérêts ou les libertés et droits fondamentaux de la personne concernée qui exigent une protection des données à caractère personnel, notamment lorsque la personne concernée est un enfant.</li>
-                </ul>
-                <br>
-                <h4>Consentement</h4>
-                <p>Les utilisateurs conviennent qu’en utilisant le site, ils consentent aux conditions énoncées dans la présente politique de confidentialité ainsi qu'à la collecte, à l’utilisation et la conservation des données énumérées dans la présente politique.</p>
-                <h4>Données personnelles que je collecte</h4>
-                <p>Je ne collecte aucune donnée automatiquement sur le site.</p>
-                <p> Je peux collecter les données suivantes lorsque vous utilisez le formulaire de contact sur le site :</p>
-                <ul>
-                    <li>Prénom et nom</li>
-                    <li>Email</li>
-                </ul>
-                <p>Veuillez noter que je ne collecte que les données qui m'aident à atteindre l’objectif énoncé dans cette politique de confidentialité. Je ne recueillerai pas de données supplémentaires sans vous en informer au préalable.</p>
-                <h4>Comment j'utilise les données personnelles</h4>
-                <p>Les données personnelles recueillies sur le site seront utilisées uniquement aux fins précisées dans la présente politique ou indiquées sur le formulaire de contact. </p>
-                <p>Les données que je recueille lorsque l’utilisateur exécute certaines fonctions ne sont utilisées qu'à des fins de communication pour répondre aux messages envoyés via le formulaire de contact</p>
-                <h4>Autres divulgations</h4>
-                <p>Je m'engage à ne pas vendre ou partager vos données avec des tiers, sauf dans les cas suivants :</p>
-                <ul>
-                    <li>si la loi l'exige</li>
-                    <li>si elle est requise pour toute procédure judiciaire</li>
-                    <li>pour prouver ou protéger mes droits légaux</li>
-                </ul>
-                <br>
-                <h4>Combien de temps je stock les données personnelles</h4>
-                <p>Je ne conserve pas les données des utilisateurs au-delà de ce qui est nécessaire pour atteindre les fins pour lesquelles elles sont recueillies.</p>
-                <h4>Vos droits en tant qu’utilisateur</h4>
-                <p>En vertu du RGPD, les utilisateurs ont les droits suivants en tant que personnes concernées :</p>
-                <ul>
-                    <li>droit d’accès</li>
-                    <li>droit de rectification</li>
-                    <li>droit à l’effacement</li>
-                    <li>droit de restreindre le traitement</li>
-                    <li>droit à la portabilité des données</li>
-                    <li>droit d'objection</li>
-                </ul>
-                <p>Vous trouverez de plus amples informations sur ces droits au chapitre 3 (<strong>art 12-23</strong>) du <strong>RGPD</strong>.</p>
-                <h4>Comment modifier, supprimer ou contester les données recueillies</h4>
-                <p>Si vous souhaitez que vos renseignements soient supprimés ou modifiés d’une façon ou d’une autre, vous pouvez me contacter par e-mail : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>. </p>
-                <p>De même, tout utilisateur dispose d’un droit de réclamation auprès de la CNIL et d’un droit de recours juridictionnel contre le site <a href="{{path('home')}}">www.charlottesaidi.fr</a></p>
-                <br><br>
+                {% include "blocks/pages/_rgpd.html.twig" %}
                 <p class="right-align">© 2002-2021, DocumentsLégaux™ (Sequiter Inc.)</p>
             </div>
         </div>
