--- a/assets/styles/materialize.scss
+++ b/assets/styles/materialize.scss
@@ -32,7 +32,7 @@
 @import "components/forms/forms";
 // @import "components/table_of_contents";
 @import "components/sidenav";
-// @import "components/preloader";
+@import "components/preloader";
 // @import "components/slider";
 // @import "components/carousel";
 // @import "components/tapTarget";
