--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
 
     </head>
     <body id="body">
-
+        {% include "blocks/components/_flashMessages.html.twig" %}
         {% include "blocks/_header.html.twig" %}
 
         <div id="pageTop" class="main scrollspy">
