--- a/assets/styles/dark/app.scss
+++ b/assets/styles/dark/app.scss
@@ -21,14 +21,11 @@ body[theme=dark] {
     }
     .sep, .border-top-right {
         background: #bd6a9a;
-        background: linear-gradient(90deg, #bd6a9a 0%, $secondary-theme 48%, #270619 100%);
+        background: linear-gradient(90deg, #bd6a9a 0%, #6A1145 48%, #270619 100%);
     }
     .border-top {
         background: #270619;
-        background: linear-gradient(90deg, #270619 0%, $secondary-theme 48%, #bd6a9a 100%);
-    }
-    .text-caption {
-        background: rgba(14, 25, 40, .9);
+        background: linear-gradient(90deg, #270619 0%, #6A1145 48%, #bd6a9a 100%);
     }
     .competences {
         color: $secondary-theme;
@@ -38,7 +35,7 @@ body[theme=dark] {
     }
     #portfolio {
         .btn-floating.show_blocks.btn-large.btn.white.purple-text {
-            background-color: rgba(0, 0, 0, .5) !important;
+            background-color: rgb(22, 27, 34) !important;
         }
     }
     #contact {
@@ -54,27 +51,23 @@ body[theme=dark] {
                 }
             }
         }
+        .btn-floating {
+            background-color: #6A1145 !important;
+        }
     }
     .demo-3 {
         figure {
             img {
-                border: solid 3px #c3c3c3;
+                border: solid 5px $tertiary-theme;
             }
             figcaption {
-                background-color: rgba(0, 0, 0, 0.5);
+                background-color: $tertiary-theme;
             }
         }
     }
     .contact_form {
         .prefix {
             color: $font-color;
-        }
-    }
-    .social {
-        a {
-            &:hover {
-                background-color: $secondary-theme;
-            }
         }
     }
     .timeline2 {
