--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,4 +1,8 @@
-{% extends 'layouts/auth-base.html.twig' %}
+{% extends "base.html.twig" %}
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('auth') }}
+{% endblock %}
 
 {% block title %}Reset Admin Password{% endblock %}
 
