--- a/templates/blocks/_header.html.twig
+++ b/templates/blocks/_header.html.twig
@@ -35,13 +35,13 @@
             {% include "blocks/components/_day-night-switch.html.twig" with {
                 id: 'togMobileButton'
             } %}
-            <a class="sidenav-close grey-text" href="#">X</a>
+            <a class="sidenav-close grey-text text-lighten-1" href="#">X</a>
         </li>
-        <li><a class="sidenav-close sidenav-head-link grey-text" href="#aPropos">A propos</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text" href="#competences">Compétences</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text" href="#portfolio">Portfolio</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text" href="#formations">Formations</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text" href="#contact">Me contacter</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-1" href="#aPropos">A propos</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-1" href="#competences">Compétences</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-1" href="#portfolio">Portfolio</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-1" href="#formations">Formations</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-1" href="#contact">Me contacter</a></li>
         <li class="mobile_nav_logo">
             {% include "blocks/components/_logo.html.twig" %}
         </li>
