--- a/templates/blocks/_page_header.html.twig
+++ b/templates/blocks/_page_header.html.twig
@@ -32,9 +32,9 @@
             {% include "blocks/components/_day-night-switch.html.twig" with {
                 id: 'togMobileButton'
             } %}
-            <a class="sidenav-close grey-text" href="#">X</a>
+            <a class="sidenav-close grey-text text-lighten-1" href="#">X</a>
         </li>
-        <li><a class="sidenav-close sidenav-head-link grey-text" href="{{path('home')}}">Retour au Portfolio</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-1" href="{{path('home')}}">Retour au Portfolio</a></li>
         <li class="mobile_nav_logo">
             {% include "blocks/components/_logo.html.twig" %}
         </li>
