--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -76,6 +76,7 @@ body[theme=light], body {
             }
         }
         ul {
+            padding-right: 10px;
             a {
                 &:hover {
                     background-color: transparent !important;
@@ -87,13 +88,13 @@ body[theme=light], body {
                 &::after {
                     content: '';
                     position: absolute;
-                    bottom: 15px;
-                    left: 0;
+                    bottom: 39%;
+                    left: 22px;
                     right: 0;
-                    width: 100%;
+                    width: 80%;
                     margin: 0 auto;
-                    height: 3px;
-                    background-color: $main-theme;
+                    height: 10px;
+                    background-color: rgba($main-theme, .4);
                     opacity: 0;
                     -webkit-transition: opacity 500ms, -webkit-transform 500ms;
                     transition: opacity 500ms, -webkit-transform 500ms;
@@ -104,9 +105,9 @@ body[theme=light], body {
                     -webkit-transform: scale(0);
                     -ms-transform: scale(0);
                     transform: scale(0);
-                    -webkit-transform-origin: center;
-                    -ms-transform-origin: center;
-                    transform-origin: center;
+                    -webkit-transform-origin: left;
+                    -ms-transform-origin: left;
+                    transform-origin: left;
                 }
                 &:hover {
                     &::after {
@@ -119,6 +120,38 @@ body[theme=light], body {
                     }
                 }
             }
+        }
+    }
+    .head-link.active, .rgpd-head-link.active {
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 39%;
+            left: 22px;
+            right: 0;
+            width: 80%;
+            margin: 0 auto;
+            height: 10px;
+            background-color: rgba($main-theme, .4);
+            opacity: 0;
+            -webkit-transition: opacity 500ms, -webkit-transform 500ms;
+            transition: opacity 500ms, -webkit-transform 500ms;
+            -o-transition: opacity 500ms, transform 500ms;
+            transition: opacity 500ms, transform 500ms;
+            transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
+            opacity: 1;
+            -webkit-transform: translate3d(0, 0.2em, 0);
+            transform: translate3d(0, 0.2em, 0);
+            opacity: 1;
+            -webkit-transform: scale(0);
+            -ms-transform: scale(0);
+            transform: scale(0);
+            -webkit-transform-origin: left;
+            -ms-transform-origin: left;
+            transform-origin: left;
+            -webkit-transform: scale(1);
+            -ms-transform: scale(1);
+            transform: scale(1);
         }
     }
     .card-panel {
@@ -195,42 +228,6 @@ body[theme=light], body {
     }
     .grey-text.text-lighten-1 {
         color: #9e9e9e !important;
-    }
-    .head-link, .rgpd-head-link {
-        display: block;
-        position: relative;
-    }
-    .head-link.active, .rgpd-head-link.active {
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 15px;
-            left: 0;
-            right: 0;
-            width: 100%;
-            margin: 0 auto;
-            height: 3px;
-            background-color: $main-theme;
-            opacity: 0;
-            -webkit-transition: opacity 500ms, -webkit-transform 500ms;
-            transition: opacity 500ms, -webkit-transform 500ms;
-            -o-transition: opacity 500ms, transform 500ms;
-            transition: opacity 500ms, transform 500ms;
-            transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
-            opacity: 1;
-            -webkit-transform: translate3d(0, 0.2em, 0);
-            transform: translate3d(0, 0.2em, 0);
-            opacity: 1;
-            -webkit-transform: scale(0);
-            -ms-transform: scale(0);
-            transform: scale(0);
-            -webkit-transform-origin: center;
-            -ms-transform-origin: center;
-            transform-origin: center;
-            -webkit-transform: scale(1);
-            -ms-transform: scale(1);
-            transform: scale(1);
-        }
     }
     .nav {
         a {
