--- a/assets/styles/light/_switch-button.scss
+++ b/assets/styles/light/_switch-button.scss
@@ -4,8 +4,8 @@
 .switch {
     opacity: 1 !important;
     pointer-events: auto !important;
-    top: 30%;
     right: 0.75rem;
+    top: 30px;
     width: 40px;
     height: 25px;
     margin: auto;
@@ -22,7 +22,7 @@
     overflow: hidden;
 }
 .switch:checked {
-    background-color: #60adfa;
+    background-color: #081018;
     transition: background-color 1s ease-in-out;
 }
 .switch:after {
