--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -110,9 +110,9 @@ body[theme=light], body {
                     -webkit-transform: scale(0);
                     -ms-transform: scale(0);
                     transform: scale(0);
-                    -webkit-transform-origin: left;
-                    -ms-transform-origin: left;
-                    transform-origin: left;
+                    -webkit-transform-origin: right;
+                    -ms-transform-origin: right;
+                    transform-origin: right;
                 }
                 &:hover {
                     &::after {
@@ -122,6 +122,9 @@ body[theme=light], body {
                         -webkit-transform: scale(1);
                         -ms-transform: scale(1);
                         transform: scale(1);
+                        -webkit-transform-origin: left;
+                        -ms-transform-origin: left;
+                        transform-origin: left;
                     }
                 }
             }
