--- a/templates/blocks/_header.html.twig
+++ b/templates/blocks/_header.html.twig
@@ -30,7 +30,7 @@
         </nav>
     </div>
     <!-- Mobile Menu -->
-    <ul id="slide-out" class="sidenav nav right">
+    <ul id="slide-out" class="sidenav nav right blur">
         <li class="right-align">
             {% include "blocks/components/_day-night-switch.html.twig" with {
                 id: 'togMobileButton'
