--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -11,8 +11,6 @@
             </div>
         </div>
     </div>
-
-    {% include "blocks/components/_section-up.html.twig"%}
     <div id="aPropos" class="purple lighten-5 section scrollspy">
         <div class="container">
             <h6 class="center-align competences">A Propos</h6>
@@ -21,10 +19,9 @@
             </div>
         </div>
     </div>
-    {% include "blocks/components/_section-down.html.twig" %}
 
     <div id="competences" class="section scrollspy">
-        <div class="container card-panel">
+        <div class="container">
             <h6 class="center-align competences">Mes compétences</h6>
             <div class="row">
                 {% include "blocks/_competences.html.twig" %}
@@ -32,7 +29,6 @@
         </div>  
     </div>
 
-    {% include "blocks/components/_section-up.html.twig"%}
     <div id="portfolio" class="purple lighten-5 section scrollspy">
             
         <div class="container">
@@ -45,10 +41,9 @@
             </div>
         </div>
     </div>
-    {% include "blocks/components/_section-down.html.twig" %}
 
     <div id="formations" class="section scrollspy">
-        <div class="container card-panel">
+        <div class="container">
             <h6 class="center-align competences">Formations</h6>
             <div class="row formations">
                 {% include "blocks/_education.html.twig" %}
