--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -2,26 +2,60 @@
 @import './_switch-button.scss';
 
 $main-theme: #6A1145;
+$main-color: #fff;
 $main-lightScroll: #e2c6d7;
 
 body[theme=light] {
-    background-image: url('../../../public/images/background/desktop.webp');
+    background-color: $main-color;
+    .black {
+        background-color: $main-color !important;
+    }
+    #contact, footer {
+        h6 {
+            color: $main-theme !important;
+        }
+        p, p.white-text, li {
+            color: #3d3b3b !important;
+        }
+    }
+    img[alt="FrontEnd Mentor icon"] {
+        border: solid 1px #3d3b3b;
+    }
+    .social a:hover {
+        .svg-inline--fa {
+            path {
+               fill: #ffffff; 
+            }
+        }
+    }
 }
 body[theme=light], body {
 	font-size: 16px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    .main.scrollspy {
+        backdrop-filter: blur(81px);
+    }
+    .gradient_background {
+        position: fixed;
+        top: 0;
+        bottom: 60%;
+        right: 0;
+        left: 0;
+        background-image: linear-gradient(to left, #b37b9c, #9286b7, #6392bd, #449aad, #539d90);
+        z-index: -1
+    }
+    .purple.lighten-5 {
+        background-color: transparent !important;
+    }
     .btn.waves-effect {
         border-radius: 15px 0;
         transition: .3s ease-out;
     }
 	&::-webkit-scrollbar, .modal::-webkit-scrollbar {
 		width: 15px;
-		background-color: #fff;
+		background-color: $main-color;
 	}
 	&::-webkit-scrollbar-track, .modal::-webkit-scrollbar-track {
-		background-color: #fff;
+		background-color: $main-color;
 	}
 	&::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
 		background-color: $main-theme;
@@ -46,6 +80,9 @@ body[theme=light], body {
     }
     .container {
         margin: 0 auto;
+    }
+    .container:not(footer .container) {
+        padding: 24px;
     }
     .blur {
         background-color: rgba(255,255,255,.04)!important;
@@ -161,7 +198,7 @@ body[theme=light], body {
         }
     }
     .card-panel {
-        background: rgba(255, 255, 255, .9);
+        background: transparent;
     }
     .card-panel.inside {
         background: transparent;
@@ -232,9 +269,6 @@ body[theme=light], body {
                 font-size: 30px;
             }
         }
-    }
-    .grey-text.text-lighten-1 {
-        color: #9e9e9e !important;
     }
     .nav {
         a {
