--- a/assets/styles/light/app.scss
+++ b/assets/styles/light/app.scss
@@ -2,6 +2,11 @@
 @import "_preset.scss";
 
 /* MAIN */
+body[theme=light] {
+    .attribution_title {
+        border-top: rgba(0, 0, 0, .1) 2px solid;
+    }
+}
 body[theme=light], body {
     .policy_main {
         padding: 150px 0 100px 0;
@@ -40,7 +45,7 @@ body[theme=light], body {
         }
     }
     .section {
-        padding: 0 50px;
+        padding: 4rem 50px;
     }
     #portfolio {
         .container {
@@ -61,8 +66,6 @@ body[theme=light], body {
                 color: #9b9797;
             }
         }
-        margin-top: -10px;
-        margin-bottom: -10px;
         .border-top.title-parts {
             height: 6px;
         }
@@ -163,7 +166,7 @@ body[theme=light], body {
         height: 10px;
     }
     .text-caption {
-        background: rgba(255, 255, 255, .9);
+        background: hsla(0,0%,100%,.9);
         border-radius: 0 100px;
     }
     .nav-wrapper {
@@ -188,8 +191,6 @@ body[theme=light], body {
         .row {
             margin: 0;
         }
-        margin-top: -10px;
-        margin-bottom: -10px;
     }
     .competences {
         -webkit-box-sizing: content-box;
@@ -220,25 +221,25 @@ body[theme=light], body {
             top: -50px;
             border-radius: 0 50%;
         }
-        .modal {
-            max-height: 85%;
-            padding: 0 0 20px 0;
-            textarea {
-                height: 100px !important;
-            }
-            .prefix {
-                color: #9e9e9e;
-                &.active {
-                    color: $main-theme;
-                    svg path {
-                        fill: $main-theme;
-                    }
-                }
-            }
-        }
     }
     .portfolio_blocks {
         display: none;
+    }
+    .modal {
+        max-height: 85%;
+        padding: 0 0 20px 0;
+        textarea {
+            height: 100px !important;
+        }
+        .prefix {
+            color: #9e9e9e;
+            &.active {
+                color: $main-theme;
+                svg path {
+                    fill: $main-theme;
+                }
+            }
+        }
     }
     .demo-3 {
         perspective: 900px;
@@ -267,7 +268,7 @@ body[theme=light], body {
                 position: relative;
                 z-index: 10;
                 margin: -15px 0;
-                border: solid 5px #fff;
+                border: solid 5px $main-color;
                 border-radius: 2px;
                 box-shadow: 0 1.5rem 4rem rgb(0 0 0 / 20%);
             }
@@ -296,7 +297,7 @@ body[theme=light], body {
                 width: 100%;
                 height: 100%;
                 padding: 26px 44px;
-                background-color: #fff;
+                background-color: $main-color;
                 text-align: center;
                 backface-visibility: hidden;
                 transform: rotateY(-180deg);
@@ -425,7 +426,6 @@ body[theme=light], body {
     }
     .attribution_title {
         font-weight: bold;
-        border-top: rgba(255, 255, 255, .1) 2px solid;
         padding-top: 20px;
     }
     .page-footer.section {
