--- a/templates/blocks/_competences.html.twig
+++ b/templates/blocks/_competences.html.twig
@@ -5,14 +5,14 @@
             <h5 class="col s12 l6">Langages</h5>
             <h5 class="col s12 l6 right-align">Frameworks et librairies</h5>
         </div>
-        <div class="card-panel inside">
+        <div class="card-panel">
             <div class="row">
                 <div class="col s12 l6">
                     {% for language in competences %}
                         {% if language.categorie == 'langages' %}
                             <div class="row valign-wrapper">
                                 <div class="col s2 hide-on-small-only">
-                                    <img src="{{asset('uploads/competences/' ~ language.image)}}" alt="{{language.title}} icon" width="50" height="50">
+                                    <img src="{{asset('uploads/competences/' ~ language.image)}}" class="circle" alt="{{language.title}} icon" width="50" height="50">
                                 </div>
                                 <div class="col s12 m10">
                                     <p class="black-text">
@@ -31,7 +31,7 @@
                         {% if framework.categorie == 'frameworks et librairies' %}
                             <div class="row valign-wrapper">
                                 <div class="col s2 hide-on-small-only">
-                                    <img src="{{asset('uploads/competences/' ~ framework.image)}}" alt="{{framework.title}} icon" width="50" height="50">
+                                    <img src="{{asset('uploads/competences/' ~ framework.image)}}" class="circle" alt="{{framework.title}} icon" width="50" height="50">
                                 </div>
                                 <div class="col s12 m10">
                                     <p class="black-text">
@@ -51,12 +51,12 @@
 
     <div id="block2" class="col s12 l7">
         <h5>Autres</h5>
-        <div class="card-panel inside">
+        <div class="card-panel">
             {% for misc in competences %}
                 {% if misc.categorie == 'autres' %}
                     <div class="row valign-wrapper">
                         <div class="col s2 hide-on-small-only">
-                            <img src="{{asset('uploads/competences/' ~ misc.image)}}" alt="{{misc.title}} icon" width="50" height="50">
+                            <img src="{{asset('uploads/competences/' ~ misc.image)}}" class="circle" alt="{{misc.title}} icon" width="50" height="50">
                         </div>
                         <div class="col s12 m10">
                             <p class="black-text">
@@ -74,7 +74,7 @@
 
     <div class="col s12 l5 perso">
         <h5 class="right-align">Personnelles</h5>
-        <div class="card-panel inside">
+        <div class="card-panel">
             {% for perso in competences %}
                 {% if perso.categorie == 'personnelles' %}
                     <div class="row valign-wrapper">
