--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -1,4 +1,5 @@
-<img src="{{asset('images/footer_wave_up.svg')}}" alt="">
+{% include "blocks/components/svgs/_section-up.html.twig" %}
+
 <div id="contact" class="page-footer black section scrollspy">
     <a href="#pageTop" id="btn_up" class="head-link btn-floating btn-large btn purple hide-on-small-only">
         <img src="{{asset('images/chevron-up-solid.svg')}}">
@@ -7,7 +8,6 @@
         <h6 class="center-align white-text competences">Pour me contacter</h6>
         <div class="row">
             <div class="col s12 l6">
-                {% include "blocks/contact/_new.html.twig" %}
                 <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a class="purple-text text-lighten-3" href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
                 <p class="center-align"><button data-target="modal1" class="btn waves-effect waves-green modal-trigger">Contact</button></p>
             </div>
@@ -15,10 +15,10 @@
                 <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
                 <div class="social">
                     <a class="white-text" href="https://www.linkedin.com/in/charlotte-saidi/" title="Mon Profil LinkedIn" > 
-                        <img src="{{asset('images/linkedin-in-brands.svg')}}">
+                        {% include "blocks/components/svgs/_linkedin.html.twig" %}
                     </a>
                     <a class="white-text" href="https://github.com/charlottesaidi" title="Mon GitHub" > 
-                        <img src="{{asset('images/github-brands.svg')}}">
+                        {% include "blocks/components/svgs/_github.html.twig" %}
                     </a>
                     <a href="https://www.frontendmentor.io/profile/charlottesaidi" title="Mes Challenges FrontEnd Mentor" >
                         <img src="{{asset('images/frontend_mentor.webp')}}" alt="FrontEnd Mentor icon" width="30" class="circle">
