toggle nav visibility on scroll

--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -130,6 +130,11 @@ body[theme=light], body {
             }
         }
     }
+    nav.nav-hidden {
+        &, .logo {
+            transform: translate3d(0,-100%,0)
+        }
+    }
     .head-link.active, .rgpd-head-link.active {
         &::after {
             content: '';
