--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -43,6 +43,24 @@ body[theme=light], body {
         background-image: linear-gradient(to left, #b37b9c, #9286b7, #6392bd, #449aad, #539d90);
         z-index: -1
     }
+    .background {
+        position: absolute;
+        background: url('../../../public/images/background/desktop.webp') no-repeat center;
+        background-size: cover;
+        width: 100%;
+        height: 110vh;
+        top: 0;
+        opacity: .1;
+    }
+    .background::after {
+        content: '';
+        position:absolute;
+        height: 200px;
+        bottom: -100px;
+        width: 100%;
+        background: rgb(243,239,245);
+        background: linear-gradient(0deg, rgba(243,239,245,0) 0%, rgba(243,239,245,1) 45%, rgba(243,239,245,1) 68%, rgba(243,239,245,0) 100%);
+    }
     .purple.lighten-5 {
         background-color: transparent !important;
     }
@@ -279,7 +297,7 @@ body[theme=light], body {
     }
     .line {
         fill: none;
-        stroke: #9e9e9e;
+        stroke: #f0f0f0;
         stroke-width: 6;
         transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
     }
