--- a/assets/styles/light/app.scss
+++ b/assets/styles/light/app.scss
@@ -49,6 +49,7 @@ body[theme=light], body {
     }
     .section#aPropos {
         padding-top: 0;
+        margin-top:4.5rem;
     }
     #portfolio {
         .container {
