--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,12 +4,13 @@
 
     <div id="caption-border" class="caption">
         <div class="box-caption ">
-            <div class="text-caption card-panel center-align">
+            <div class="text-caption center-align">
                 <h1><span class="name grey-text text-darken-3"><a class="al" href="{{path('admin')}}">C</a>harlotte Saidi</span>
                 <span class="sep"></span>
-                <span class="job light grey-text text-lighten-1">Développeuse Web Junior</span></h1>
+                <span class="job light grey-text text-darken-1">Développeuse Web Junior</span></h1>
             </div>
         </div>
+        <div class="background"></div>
     </div>
     <div id="aPropos" class="purple lighten-5 section scrollspy">
         <div class="container">
