changed switch theme icon

--- a/templates/blocks/_page_header.html.twig
+++ b/templates/blocks/_page_header.html.twig
@@ -8,7 +8,7 @@
             </div>
             <div class="nav-wrapper col s12 m12">
                 <ul class="right hide-on-small-only">
-                    <li><a class="rgpd-head-link grey-text text-lighten-2" href="{{path('home')}}">Retour au Portfolio</a></li>
+                    <li><a class="rgpd-head-link grey-text text-darken-2" href="{{path('home')}}">Retour au Portfolio</a></li>
                     <li>
                         {% include "blocks/components/_day-night-switch.html.twig" with {
                             id: 'togButton'
@@ -31,9 +31,9 @@
             {% include "blocks/components/_day-night-switch.html.twig" with {
                 id: 'togMobileButton'
             } %}
-            <a class="sidenav-close grey-text text-lighten-2" href="#">X</a>
+            <a class="sidenav-close grey-text text-darken-2" href="#">X</a>
         </li>
-        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-2" href="{{path('home')}}">Retour au Portfolio</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-darken-2" href="{{path('home')}}">Retour au Portfolio</a></li>
         <li class="mobile_nav_logo">
             {% include "blocks/components/_logo.html.twig" %}
         </li>
