--- a/assets/styles/dark/_preset.scss
+++ b/assets/styles/dark/_preset.scss
@@ -114,7 +114,7 @@ body[theme=dark] {
             }
         }
     }
-    .grey-text.text-lighten-2 {
+    .grey-text.text-lighten-2, .grey-text.text-darken-2 {
         color: $font-color !important;
     }
     .page-footer {
