--- a/templates/blocks/_header.html.twig
+++ b/templates/blocks/_header.html.twig
@@ -8,12 +8,12 @@
             </div>
             <div class="nav-wrapper col s12 m12">
                 <ul class="right hide-on-small-only">
-                    <li><a class="head-link grey-text text-lighten-2" href="#aPropos">A propos</a></li>
-                    <li><a class="head-link grey-text text-lighten-2" href="#competences">Compétences</a></li>
-                    <li><a class="head-link grey-text text-lighten-2" href="#portfolio">Portfolio</a></li>
-                    <li><a class="head-link grey-text text-lighten-2" href="#formations">Formations</a></li>
-                    <li><a class="head-link grey-text text-lighten-2" href="#contact">Me contacter</a></li>
-                    <li>
+                    <li><a class="head-link grey-text text-darken-2" href="#aPropos">A propos</a></li>
+                    <li><a class="head-link grey-text text-darken-2" href="#competences">Compétences</a></li>
+                    <li><a class="head-link grey-text text-darken-2" href="#portfolio">Portfolio</a></li>
+                    <li><a class="head-link grey-text text-darken-2" href="#formations">Formations</a></li>
+                    <li><a class="head-link grey-text text-darken-2" href="#contact">Me contacter</a></li>
+                    <li class="toggle_them_block">
                         {% include "blocks/components/_day-night-switch.html.twig" with {
                             id: 'togButton'
                         } %}
@@ -35,13 +35,13 @@
             {% include "blocks/components/_day-night-switch.html.twig" with {
                 id: 'togMobileButton'
             } %}
-            <a class="sidenav-close grey-text text-lighten-2" href="#">X</a>
+            <a class="sidenav-close grey-text text-darken-2" href="#">X</a>
         </li>
-        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-2" href="#aPropos">A propos</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-2" href="#competences">Compétences</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-2" href="#portfolio">Portfolio</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-2" href="#formations">Formations</a></li>
-        <li><a class="sidenav-close sidenav-head-link grey-text text-lighten-2" href="#contact">Me contacter</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-darken-2" href="#aPropos">A propos</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-darken-2" href="#competences">Compétences</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-darken-2" href="#portfolio">Portfolio</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-darken-2" href="#formations">Formations</a></li>
+        <li><a class="sidenav-close sidenav-head-link grey-text text-darken-2" href="#contact">Me contacter</a></li>
         <li class="mobile_nav_logo">
             {% include "blocks/components/_logo.html.twig" %}
         </li>
