changed svg arrows

--- a/assets/styles/light/_preset.scss
+++ b/assets/styles/light/_preset.scss
@@ -271,6 +271,9 @@ body[theme=light], body {
             }
         }
     }
+    .sidenav-overlay {
+        background-color: transparent !important;
+    }
     .sidenav {
         li.row {
             .col.s6 {
