--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,6 +10,9 @@
                 <span class="job light grey-text text-darken-1">Développeuse Web Junior</span></h1>
             </div>
         </div>
+        <a href="#aPropos" class="head-link btn-floating btn-large btn purple header_button">
+            <img src="{{asset('images/chevron-down-solid.svg')}}">
+        </a>
         <div class="background"></div>
     </div>
     <div id="aPropos" class="purple lighten-5 section scrollspy">
